--- a/style.css
+++ b/style.css
@@ -1,8 +1,183 @@
+body {
+  min-height: 100vh;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#horizontal-underline {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0px;
+  height: 4px;
+  border-radius: 4px;
+  background-color: #548cff;
+}
+
+#vertical-underline {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0px;
+  height: 4px;
+  border-radius: 4px;
+  background-color: #8267be;
+}
+
+.divider {
+  position: relative;
+  margin: 40px 0;
+  height: 1px;
+}
+.divider:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 5%;
+  right: 5%;
+  width: 90%;
+  height: 1px;
+  background-image: linear-gradient(to right, transparent, rgb(48, 49, 51), transparent);
+}
+
+.flex-row-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 nav a {
   text-decoration: none;
+  padding: 8px 6px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 24px;
+  font-weight: 700;
+  cursor: pointer;
   color: #4e5968;
+}
+
+nav:first-of-type ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+
+nav:nth-of-type(2) ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
 }
 
 nav li {
   list-style: none;
+}
+
+nav:first-of-type li {
+  padding: 0 8px;
+}
+
+nav:nth-of-type(2) li {
+  padding: 8px 0;
+}
+
+*,
+:after,
+:before {
+  box-sizing: border-box;
+}
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
 }
