--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ nav:first-of-type li {
   padding: 0 8px;
 }
 
-nav:nth-of-type(2) li {
-  padding: 8px 0;
+nav:nth-of-type(2) li:not(:last-of-type) {
+  margin-bottom: 8px;
 }
 
 *,
@@ -96,84 +96,11 @@ nav:nth-of-type(2) li {
 html,
 body,
 div,
-span,
-applet,
-object,
-iframe,
 h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
 a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
 ol,
 ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+li {
   margin: 0;
   padding: 0;
   border: 0;
